--- a/src/app/components/Navigation/Navigation.module.css
+++ b/src/app/components/Navigation/Navigation.module.css
@@ -1,5 +1,40 @@
 .container {
-  background-color: black;
+  background-color: var(--color-secondary-light);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-/* Add color to be able to commit the work */
+.navLinks {
+  display: flex;
+  justify-content: space-around;
+  width: 60%;
+}
+
+.navLinks li {
+  list-style: none;
+}
+
+.activeLink {
+  color: var(--color-text-effect);
+  text-decoration: none;
+  font-size: 0.9rem;
+}
+
+.inactiveLink {
+  color: var(--color-text-inactive);
+  text-decoration: none;
+  font-size: 0.9rem;
+}
+
+.burger {
+  display: none;
+}
+
+.burger div {
+  display: block;
+  width: 1.5rem;
+  height: 0.1rem;
+  background-color: var(--color-text-effect);
+  margin: 0.2rem;
+}
