--- a/src/app/components/Navigation/Navigation.module.css
+++ b/src/app/components/Navigation/Navigation.module.css
@@ -3,12 +3,14 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  height: 5rem;
 }
 
 .navLinks {
   display: flex;
   justify-content: space-around;
   width: 60%;
+  padding: 0;
 }
 
 .navLinks li {
@@ -37,4 +39,22 @@
   height: 0.1rem;
   background-color: var(--color-text-effect);
   margin: 0.2rem;
+}
+
+@media screen and (max-width: 1000px) {
+  .navLinks {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .navLinks {
+    position: absolute;
+    right: 0;
+    height: 15rem;
+    top: 5rem;
+    margin: 0;
+    background-color: var(--color-secondary-light);
+    display: grid;
+  }
 }
