--- a/src/app/components/Navigation/Navigation.module.css
+++ b/src/app/components/Navigation/Navigation.module.css
@@ -31,6 +31,7 @@
 
 .burger {
   display: none;
+  cursor: pointer;
 }
 
 .burger div {
@@ -48,13 +49,34 @@
 }
 
 @media screen and (max-width: 520px) {
+  body {
+    overflow-x: hidden;
+  }
+
   .navLinks {
+    background-color: var(--color-secondary-light);
     position: absolute;
     right: 0;
-    height: 15rem;
     top: 5rem;
     margin: 0;
-    background-color: var(--color-secondary-light);
+    height: 15rem;
+    width: 40%;
     display: grid;
+    transform: translateX(100%);
+    transition: trasform 0.5s ease-in;
   }
+
+  .navLinks li {
+    opacity: 0;
+  }
+
+  .burger {
+    display: block;
+    position: absolute;
+    right: 1rem;
+  }
+}
+
+.navActive {
+  transform: translateX(0%);
 }
