--- a/src/app/components/Navigation/Navigation.module.css
+++ b/src/app/components/Navigation/Navigation.module.css
@@ -1,15 +1,20 @@
 .container {
   background-color: var(--color-secondary-light);
   display: flex;
-  justify-content: space-around;
   align-items: center;
   height: 5rem;
+  margin: 0;
+}
+
+.headerTitle {
+  color: var(--color-text-effect);
+  margin-left: 1rem;
 }
 
 .navLinks {
   display: flex;
   justify-content: space-around;
-  width: 60%;
+  width: 40%;
   padding: 0;
 }
 
