--- a/src/app/components/Navigation/Navigation.module.css
+++ b/src/app/components/Navigation/Navigation.module.css
@@ -1,17 +1,19 @@
 .container {
-  background-color: var(--color-secondary-light);
+  background-color: var(--color-secondary);
   display: flex;
   align-items: center;
   height: 5rem;
   margin: 0;
+  overflow: visible;
 }
 
 .headerTitle {
   color: var(--color-text-effect);
-  margin-left: 1rem;
+  margin-left: 1.5rem;
 }
 
 .navLinks {
+  margin-right: 0;
   display: flex;
   justify-content: space-around;
   width: 40%;
@@ -50,7 +52,9 @@
 
 @media screen and (max-width: 1000px) {
   .navLinks {
-    width: 60%;
+    width: 50%;
+    position: absolute;
+    right: 1rem;
   }
 }
 
@@ -60,7 +64,7 @@
   }
 
   .navLinks {
-    background-color: var(--color-secondary-light);
+    background-color: var(--color-secondary);
     position: absolute;
     right: 0;
     top: 5rem;
