--- a/src/app/pages/WelcomePage/WelcomePage.module.css
+++ b/src/app/pages/WelcomePage/WelcomePage.module.css
@@ -1,4 +1,7 @@
 .container {
+  display: grid;
+  align-content: space-between;
+  padding: 1.5em 0 2em;
   background-image: url('../../components/Welcome/WelcomePageImage.jpg');
   background-size: cover;
   height: 100vh;
@@ -6,19 +9,11 @@
 }
 
 .icon {
-  position: absolute;
-  top: 1.5rem;
-  left: 0;
-  right: 0;
   margin: auto;
 }
 
 .form {
   display: grid;
-  position: absolute;
-  bottom: 2rem;
-  left: 0;
-  right: 0;
   margin: auto;
   width: 10rem;
   gap: 0.5rem;
