💄 Finish styling the page

--- a/src/app/pages/AddEntry/AddEntry.module.css
+++ b/src/app/pages/AddEntry/AddEntry.module.css
@@ -3,19 +3,42 @@
 }
 
 .form {
-  display: grid;
   margin: 1.5rem;
+  height: 75vh;
+  display: grid;
+  grid-template-rows: 1fr 9rem 1.5rem 9rem 1fr;
   gap: 1rem;
 }
 
-.imageInput,
+.titleInput {
+  text-align: center;
+  font-size: 1.2rem;
+  border: none;
+}
+
+.imageUpload {
+  display: grid;
+  place-items: center;
+}
+
+.imageInput {
+  display: none;
+}
+
+.imageUpload,
 .textInput {
-  width: 17.5rem;
-  height: 9rem;
   background-color: var(--color-primary);
   color: var(--color-text-effect);
   border: none;
   border-radius: var(--border-radius-card);
+  text-align: center;
+}
+
+.dateInput {
+  font-size: 0.8rem;
+  border: solid var(--color-primary) 0.1rem;
+  border-radius: var(--border-radius-button);
+  font-family: var(--font-text);
   text-align: center;
 }
 
@@ -25,4 +48,9 @@ input.textInput::placeholder {
 
 .button {
   width: 4.5rem;
+}
+
+.activeTextInput {
+  border: solid var(--color-primary) 0.2rem;
+  background-color: var(--color-background);
 }
