--- a/src/app/components/UploadImage/UploadImage.module.css
+++ b/src/app/components/UploadImage/UploadImage.module.css
@@ -1,6 +1,6 @@
 .container {
   background-color: var(--color-primary);
-  height: 9rem;
+  min-height: 9rem;
   min-width: 9rem;
   border-radius: var(--border-radius-card);
   display: grid;
