--- a/src/app/components/Button/Button.module.css
+++ b/src/app/components/Button/Button.module.css
@@ -3,7 +3,17 @@
   border: none;
   text-align: center;
   color: var(--color-text-effect);
+  min-width: 3rem;
   height: 1.5rem;
   font-size: 1rem;
   border-radius: var(--border-radius-button);
+}
+
+.button:hover {
+  background-color: var(--color-secondary);
+}
+
+.button:active {
+  background-color: var(--color-secondary);
+  transform: translateY(3px);
 }
