🎨 Move select element from component to page

--- a/src/app/pages/Gallery/Gallery.module.css
+++ b/src/app/pages/Gallery/Gallery.module.css
@@ -1,3 +1,8 @@
+.container {
+  display: grid;
+  justify-content: center;
+}
+
 .select {
   background-color: var(--color-effect);
   width: 10rem;
@@ -6,4 +11,6 @@
   text-align: center;
   border: none;
   border-radius: var(--border-radius-button);
+  margin-top: 1rem;
+  justify-self: center;
 }
