--- a/src/app/components/Calendar/Calendar.styles.css
+++ b/src/app/components/Calendar/Calendar.styles.css
@@ -1,10 +1,19 @@
 .calendar {
   background-color: var(--color-primary);
+  width: 100vw;
+  border-radius: var(--border-radius-card);
+  margin: 0;
+}
+
+.Calendar__weekDay {
+  color: var(--color-secondary);
+  font-size: 0.8rem;
+  background-color: var(--color-background);
 }
 
 .today {
   color: var(--color-text-effect) !important;
-  border: 2px solid var(--color-text-effect) !important;
+  border: 2px solid var(--color-background) !important;
 }
 
 .today::after {
@@ -13,4 +22,9 @@
 
 .today:hover {
   background-color: var(--color-effect) !important;
+}
+
+.highlightedDays {
+  border: 2px solid var(--color-effect) !important;
+  color: var(--color-text-effect) !important;
 }
