--- a/src/app/components/Navigation/Navigation.module.css
+++ b/src/app/components/Navigation/Navigation.module.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   height: 5rem;
+  width: 100vw;
   margin: 0;
   overflow: visible;
 }
@@ -24,14 +25,8 @@
   list-style: none;
 }
 
-.activeLink {
+.link {
   color: var(--color-text-effect);
-  text-decoration: none;
-  font-size: 0.9rem;
-}
-
-.inactiveLink {
-  color: var(--color-text-inactive);
   text-decoration: none;
   font-size: 0.9rem;
 }
@@ -70,6 +65,7 @@
     right: 0;
     top: 5rem;
     margin: 0;
+    padding-top: 2rem;
     height: 15rem;
     width: 40%;
     display: grid;
