--- a/src/app/pages/SingleEntry/SingleEntry.module.css
+++ b/src/app/pages/SingleEntry/SingleEntry.module.css
@@ -2,12 +2,15 @@
   display: grid;
   margin: 1.5rem 1rem;
   text-align: center;
+  overflow: hidden;
+  gap: 1.5rem;
 }
 
 .image {
-  height: 90%;
   width: 100%;
+  max-height: 15rem;
   object-fit: cover;
+  overflow: hidden;
   border-radius: var(--border-radius-card);
 }
 
