💄 Change styling welcome page

--- a/src/app/pages/WelcomePage/WelcomePage.module.css
+++ b/src/app/pages/WelcomePage/WelcomePage.module.css
@@ -13,11 +13,10 @@
 }
 
 .form {
-  display: grid;
-  margin: auto;
-  width: 10rem;
-  gap: 0.3rem;
-  place-items: center;
+  display: flex;
+  margin: 1rem;
+  gap: 0.5rem;
+  place-content: center;
 }
 
 .textInput {
