--- a/src/app/pages/Gallery/Gallery.module.css
+++ b/src/app/pages/Gallery/Gallery.module.css
@@ -24,12 +24,14 @@
   align-content: center;
 }
 
-.showAll {
+.icon {
   background-color: var(--color-secondary);
-  text-align: center;
-  color: var(--color-text-effect);
-  height: 1.5rem;
-  font-size: 1rem;
   border-radius: var(--border-radius-button);
-  align-content: center;
+  justify-self: end;
+  width: 2rem;
+  height: 2rem;
+  padding: 0.3rem;
+  position: sticky;
+  right: 1rem;
+  bottom: 1rem;
 }
