💫 Add animation on pages

--- a/src/app/components/GalleryCard/GalleryCard.module.css
+++ b/src/app/components/GalleryCard/GalleryCard.module.css
@@ -8,6 +8,17 @@
   place-items: center;
   align-items: center;
   border-radius: var(--border-radius-card);
+  animation: fadein 2s;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0.4;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 .dateContainer {
