--- a/src/app/components/Calendar/Calendar.styles.css
+++ b/src/app/components/Calendar/Calendar.styles.css
@@ -3,6 +3,17 @@
   width: 100vw;
   border-radius: var(--border-radius-card);
   margin: 0;
+  animation: fadein 0.8s;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0.7;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 .Calendar__weekDay {
