--- a/src/app/pages/AddEntry/AddEntry.module.css
+++ b/src/app/pages/AddEntry/AddEntry.module.css
@@ -2,12 +2,23 @@
   display: grid;
 }
 
+@keyframes fadein {
+  from {
+    opacity: 0.5;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 .form {
   margin: 1.5rem 1rem;
   height: 80vh;
   display: grid;
   grid-template-rows: 12rem 1fr 1.5rem 12rem 1.5rem;
   gap: 1rem;
+  animation: fadein 0.8s;
 }
 
 .image {
