--- a/src/app/pages/Home/Home.module.css
+++ b/src/app/pages/Home/Home.module.css
@@ -19,6 +19,17 @@
   width: 90%;
   border-radius: var(--border-radius-card);
   padding: 1rem;
+  animation: fadein 0.8s;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0.7;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 .date {
