--- a/src/app/pages/SingleEntry/SingleEntry.module.css
+++ b/src/app/pages/SingleEntry/SingleEntry.module.css
@@ -4,6 +4,17 @@
   text-align: center;
   overflow: hidden;
   gap: 1.5rem;
+  animation: fadein 1.5s;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 .image {
@@ -46,6 +57,7 @@
   text-align: center;
   color: var(--color-text-effect);
   font-size: 1rem;
+  animation: fadein 0.8s;
 }
 
 .link {
