Add show text when no image in gallery

--- a/src/app/components/GalleryCard/GalleryCard.module.css
+++ b/src/app/components/GalleryCard/GalleryCard.module.css
@@ -44,3 +44,12 @@
   object-fit: cover;
   overflow: hidden;
 }
+
+.text {
+  background-color: var(--color-background);
+  height: 100%;
+  margin: 0;
+  padding: 1rem;
+  border: solid 1.5px var(--color-primary);
+  border-radius: 0 var(--border-radius-card) var(--border-radius-card) 0;
+}
