✨ Add functionality to EditEntry Page

--- a/src/app/pages/EditEntry/EditEntry.module.css
+++ b/src/app/pages/EditEntry/EditEntry.module.css
@@ -21,6 +21,12 @@
   animation: fadein 0.8s;
 }
 
+.imageContainer {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 0.5rem;
+}
+
 .image {
   height: 100%;
   width: 100%;
