--- a/src/app/pages/SingleEntry/SingleEntry.module.css
+++ b/src/app/pages/SingleEntry/SingleEntry.module.css
@@ -36,6 +36,17 @@
   gap: 1rem;
 }
 
+.edit {
+  background-color: var(--color-secondary);
+  border: none;
+  text-align: center;
+  color: var(--color-text-effect);
+  height: 1.5rem;
+  width: 100%;
+  font-size: 1rem;
+  border-radius: var(--border-radius-button);
+}
+
 .empty {
   background-color: var(--color-primary);
   border-radius: var(--border-radius-card);
