--- a/src/app/pages/EditEntry/EditEntry.module.css
+++ b/src/app/pages/EditEntry/EditEntry.module.css
@@ -16,7 +16,7 @@
   margin: 1.5rem 1rem;
   height: 80vh;
   display: grid;
-  grid-template-rows: 12rem 1fr 1.5rem 12rem 1.5rem;
+  grid-template-rows: 1fr 3rem 1.5rem 1fr 1.5rem;
   gap: 1rem;
   animation: fadein 0.8s;
 }
@@ -24,13 +24,17 @@
 .imageContainer {
   display: grid;
   grid-template-columns: 2fr 1fr;
+  width: 100%;
+  height: 100%;
   gap: 0.5rem;
+  overflow: hidden;
 }
 
 .image {
   height: 100%;
   width: 100%;
   object-fit: cover;
+  overflow: hidden;
   border-radius: var(--border-radius-card);
 }
 
