--- a/src/app/pages/EditEntry/EditEntry.module.css
+++ b/src/app/pages/EditEntry/EditEntry.module.css
@@ -23,11 +23,11 @@
 
 .imageContainer {
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 1fr;
   width: 100%;
-  height: 100%;
-  gap: 0.5rem;
+  min-height: 9rem;
   overflow: hidden;
+  position: relative;
 }
 
 .image {
@@ -36,6 +36,16 @@
   object-fit: cover;
   overflow: hidden;
   border-radius: var(--border-radius-card);
+}
+
+.upload {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  opacity: 0.5;
 }
 
 .titleInput {
